// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/components/RootLayout/index.tsx 1`] = `"bd9fea18708e85d7a8117d761192c9b4"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/components/testComponent/index.ts 1`] = `"66e837ed03ae52c1741c39138f6b1e59"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/components/testComponent/testComponent.tsx 1`] = `"c1fba66f368a7c6a62496fecf5d6bb1b"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/index.tsx 1`] = `"47298960b890c67952853d9470dcd1d0"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/redux/ducks/index.ts 1`] = `"33528d1413803770743f997b1d5540c6"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/redux/ducks/testDuck/testDuck.ts 1`] = `"5dfb438f17d6ef5f695629fd6346b18a"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/redux/sagas/index.ts 1`] = `"e23efdf8bcee4e5476fe3aa56d536e75"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/redux/selectors/index.ts 1`] = `"6c8425d082718860d737b83973731057"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/readme.md 1`] = `"1f1dcc180a5f38ad42d8dcea10766c79"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/components/testComponent2/index.ts 1`] = `"c6683951ee4ebd52ab679eac643dd4aa"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/components/testComponent2/testComponent2.tsx 1`] = `"2446c766091d4ffc3bd33d366fd04fbd"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/index.ts 1`] = `"cc2c8bd60d2ca37ca3a1be1623d276d5"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/layout.tsx 1`] = `"77d2bfe700634435ba889dd18bc253a3"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/redux/ducks/index.ts 1`] = `"974eb15b43f08a38736ee872ca83d043"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/redux/ducks/testDuck2/testDuck2.ts 1`] = `"734cbf44f6b50c53ec00e91f16bf339a"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/redux/sagas/index.ts 1`] = `"4079a6b4f1e6d81cbc94c5a1d60604a9"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/redux/selectors/index.ts 1`] = `"85f9a89021625dbd6a152f541a920c29"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/redux/selectors/testRoute.ts 1`] = `"144fb6c9b9d53d42137e09bc4cbbbc26"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/index.ts 1`] = `"b8b115c44607f9bf1df189f677650f79"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/testComponent3.tsx 1`] = `"a7b9694f82808a0f9251e0b3946b967f"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/index.ts 1`] = `"7219714256642c7a44858c42a80bbf52"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/layout.tsx 1`] = `"746d1b3c83a2fc39add4e85eaf59cbc5"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/ducks/index.ts 1`] = `"a41d6164e37356212616d341b28aec9d"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/sagas/index.ts 1`] = `"4079a6b4f1e6d81cbc94c5a1d60604a9"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/index.ts 1`] = `"45149cd07269f32980273a007a92c198"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/testRoute2.ts 1`] = `"144fb6c9b9d53d42137e09bc4cbbbc26"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/index.ts 1`] = `"d618ef580c6c78402ddc979c9df88c30"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/layout.tsx 1`] = `"959b8d0b1c57ad5f65ab18f42412254a"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/ducks/index.ts 1`] = `"b8691136ebd5bcef166911cb3b704695"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/sagas/index.ts 1`] = `"4079a6b4f1e6d81cbc94c5a1d60604a9"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/index.ts 1`] = `"e02cddab29983a120f513e8b3e53b90d"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/testRoute3.ts 1`] = `"144fb6c9b9d53d42137e09bc4cbbbc26"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/ui/readme.md 1`] = `"30021987e695b162f2888956063d23d8"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/ui/testUi/index.ts 1`] = `"8a9de13f6510c85917c451b26ebdb783"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/ui/testUi/testUi.story.tsx 1`] = `"4b070b3b570f6e9f52e1eba5d2a57c64"`;

exports[`generating duck should generate a new duck based on testRoutes: <project-root>playground/src/ui/testUi/testUi.tsx 1`] = `"0681a3f4331a7f3bef9962b38cc03dde"`;

exports[`generating duck should generate a new duck based on testRoutes: apr g duck --name testDuck2 --route src/routes/testRoute --autoLink 1`] = `
",
Loaded templates: <project-root>apr-cli/_templates/
       added: src/routes/testRoute/redux/ducks/testDuck2/testDuck2.ts
,Warning: The 'await-promise' rule requires type information.
Warning: The 'deprecation' rule requires type information.
Warning: The 'no-floating-promises' rule requires type information.
Warning: The 'no-unnecessary-qualifier' rule requires type information.
Warning: The 'no-unnecessary-type-assertion' rule requires type information.
Warning: The 'strict-type-predicates' rule requires type information.
"
`;

exports[`generating duck should generate a new duck based on testRoutes: file-list 1`] = `
Array [
  "<project-root>playground/src/components/RootLayout/index.tsx",
  "<project-root>playground/src/components/testComponent/index.ts",
  "<project-root>playground/src/components/testComponent/testComponent.tsx",
  "<project-root>playground/src/index.tsx",
  "<project-root>playground/src/redux/ducks/index.ts",
  "<project-root>playground/src/redux/ducks/testDuck/testDuck.ts",
  "<project-root>playground/src/redux/sagas/index.ts",
  "<project-root>playground/src/redux/selectors/index.ts",
  "<project-root>playground/src/routes/readme.md",
  "<project-root>playground/src/routes/testRoute/components/testComponent2/index.ts",
  "<project-root>playground/src/routes/testRoute/components/testComponent2/testComponent2.tsx",
  "<project-root>playground/src/routes/testRoute/index.ts",
  "<project-root>playground/src/routes/testRoute/layout.tsx",
  "<project-root>playground/src/routes/testRoute/redux/ducks/index.ts",
  "<project-root>playground/src/routes/testRoute/redux/ducks/testDuck2/testDuck2.ts",
  "<project-root>playground/src/routes/testRoute/redux/sagas/index.ts",
  "<project-root>playground/src/routes/testRoute/redux/selectors/index.ts",
  "<project-root>playground/src/routes/testRoute/redux/selectors/testRoute.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/testComponent3.tsx",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/layout.tsx",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/ducks/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/sagas/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/testRoute2.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/layout.tsx",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/ducks/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/sagas/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/testRoute3.ts",
  "<project-root>playground/src/ui/readme.md",
  "<project-root>playground/src/ui/testUi/index.ts",
  "<project-root>playground/src/ui/testUi/testUi.story.tsx",
  "<project-root>playground/src/ui/testUi/testUi.tsx",
]
`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/components/RootLayout/index.tsx 1`] = `"bd9fea18708e85d7a8117d761192c9b4"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/components/testComponent/index.ts 1`] = `"66e837ed03ae52c1741c39138f6b1e59"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/components/testComponent/testComponent.tsx 1`] = `"c1fba66f368a7c6a62496fecf5d6bb1b"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/index.tsx 1`] = `"47298960b890c67952853d9470dcd1d0"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/redux/ducks/index.ts 1`] = `"33528d1413803770743f997b1d5540c6"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/redux/ducks/testDuck/testDuck.ts 1`] = `"5dfb438f17d6ef5f695629fd6346b18a"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/redux/sagas/index.ts 1`] = `"e23efdf8bcee4e5476fe3aa56d536e75"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/redux/selectors/index.ts 1`] = `"6c8425d082718860d737b83973731057"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/readme.md 1`] = `"1f1dcc180a5f38ad42d8dcea10766c79"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/components/testComponent2/index.ts 1`] = `"c6683951ee4ebd52ab679eac643dd4aa"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/components/testComponent2/testComponent2.tsx 1`] = `"2446c766091d4ffc3bd33d366fd04fbd"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/index.ts 1`] = `"cc2c8bd60d2ca37ca3a1be1623d276d5"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/layout.tsx 1`] = `"77d2bfe700634435ba889dd18bc253a3"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/redux/ducks/index.ts 1`] = `"974eb15b43f08a38736ee872ca83d043"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/redux/ducks/testDuck2/testDuck2.ts 1`] = `"734cbf44f6b50c53ec00e91f16bf339a"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/redux/sagas/index.ts 1`] = `"4079a6b4f1e6d81cbc94c5a1d60604a9"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/redux/selectors/index.ts 1`] = `"85f9a89021625dbd6a152f541a920c29"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/redux/selectors/testRoute.ts 1`] = `"144fb6c9b9d53d42137e09bc4cbbbc26"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/index.ts 1`] = `"b8b115c44607f9bf1df189f677650f79"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/testComponent3.tsx 1`] = `"a7b9694f82808a0f9251e0b3946b967f"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/index.ts 1`] = `"7219714256642c7a44858c42a80bbf52"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/layout.tsx 1`] = `"746d1b3c83a2fc39add4e85eaf59cbc5"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/ducks/index.ts 1`] = `"f91d5be1839a205d276b57913c83fb62"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/ducks/testDuck3/testDuck3.ts 1`] = `"3c0f7c47fe6fe996ba5a86839d51e90a"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/sagas/index.ts 1`] = `"4079a6b4f1e6d81cbc94c5a1d60604a9"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/index.ts 1`] = `"45149cd07269f32980273a007a92c198"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/testRoute2.ts 1`] = `"144fb6c9b9d53d42137e09bc4cbbbc26"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/index.ts 1`] = `"d618ef580c6c78402ddc979c9df88c30"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/layout.tsx 1`] = `"959b8d0b1c57ad5f65ab18f42412254a"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/ducks/index.ts 1`] = `"b8691136ebd5bcef166911cb3b704695"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/sagas/index.ts 1`] = `"4079a6b4f1e6d81cbc94c5a1d60604a9"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/index.ts 1`] = `"e02cddab29983a120f513e8b3e53b90d"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/testRoute3.ts 1`] = `"144fb6c9b9d53d42137e09bc4cbbbc26"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/ui/readme.md 1`] = `"30021987e695b162f2888956063d23d8"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/ui/testUi/index.ts 1`] = `"8a9de13f6510c85917c451b26ebdb783"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/ui/testUi/testUi.story.tsx 1`] = `"4b070b3b570f6e9f52e1eba5d2a57c64"`;

exports[`generating duck should generate a new duck based on testRoutes2: <project-root>playground/src/ui/testUi/testUi.tsx 1`] = `"0681a3f4331a7f3bef9962b38cc03dde"`;

exports[`generating duck should generate a new duck based on testRoutes2: apr g duck --name testDuck3 --route src/routes/testRoute/routes/testRoute2 --autoLink 1`] = `
",
Loaded templates: <project-root>apr-cli/_templates/
       added: src/routes/testRoute/routes/testRoute2/redux/ducks/testDuck3/testDuck3.ts
,Warning: The 'await-promise' rule requires type information.
Warning: The 'deprecation' rule requires type information.
Warning: The 'no-floating-promises' rule requires type information.
Warning: The 'no-unnecessary-qualifier' rule requires type information.
Warning: The 'no-unnecessary-type-assertion' rule requires type information.
Warning: The 'strict-type-predicates' rule requires type information.
"
`;

exports[`generating duck should generate a new duck based on testRoutes2: file-list 1`] = `
Array [
  "<project-root>playground/src/components/RootLayout/index.tsx",
  "<project-root>playground/src/components/testComponent/index.ts",
  "<project-root>playground/src/components/testComponent/testComponent.tsx",
  "<project-root>playground/src/index.tsx",
  "<project-root>playground/src/redux/ducks/index.ts",
  "<project-root>playground/src/redux/ducks/testDuck/testDuck.ts",
  "<project-root>playground/src/redux/sagas/index.ts",
  "<project-root>playground/src/redux/selectors/index.ts",
  "<project-root>playground/src/routes/readme.md",
  "<project-root>playground/src/routes/testRoute/components/testComponent2/index.ts",
  "<project-root>playground/src/routes/testRoute/components/testComponent2/testComponent2.tsx",
  "<project-root>playground/src/routes/testRoute/index.ts",
  "<project-root>playground/src/routes/testRoute/layout.tsx",
  "<project-root>playground/src/routes/testRoute/redux/ducks/index.ts",
  "<project-root>playground/src/routes/testRoute/redux/ducks/testDuck2/testDuck2.ts",
  "<project-root>playground/src/routes/testRoute/redux/sagas/index.ts",
  "<project-root>playground/src/routes/testRoute/redux/selectors/index.ts",
  "<project-root>playground/src/routes/testRoute/redux/selectors/testRoute.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/testComponent3.tsx",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/layout.tsx",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/ducks/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/ducks/testDuck3/testDuck3.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/sagas/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/testRoute2.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/layout.tsx",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/ducks/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/sagas/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/testRoute3.ts",
  "<project-root>playground/src/ui/readme.md",
  "<project-root>playground/src/ui/testUi/index.ts",
  "<project-root>playground/src/ui/testUi/testUi.story.tsx",
  "<project-root>playground/src/ui/testUi/testUi.tsx",
]
`;

exports[`generating duck should generate a new duck: <project-root>playground/src/components/RootLayout/index.tsx 1`] = `"bd9fea18708e85d7a8117d761192c9b4"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/components/testComponent/index.ts 1`] = `"66e837ed03ae52c1741c39138f6b1e59"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/components/testComponent/testComponent.tsx 1`] = `"c1fba66f368a7c6a62496fecf5d6bb1b"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/index.tsx 1`] = `"47298960b890c67952853d9470dcd1d0"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/redux/ducks/index.ts 1`] = `"33528d1413803770743f997b1d5540c6"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/redux/ducks/testDuck/testDuck.ts 1`] = `"5dfb438f17d6ef5f695629fd6346b18a"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/redux/sagas/index.ts 1`] = `"e23efdf8bcee4e5476fe3aa56d536e75"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/redux/selectors/index.ts 1`] = `"6c8425d082718860d737b83973731057"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/readme.md 1`] = `"1f1dcc180a5f38ad42d8dcea10766c79"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/components/testComponent2/index.ts 1`] = `"c6683951ee4ebd52ab679eac643dd4aa"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/components/testComponent2/testComponent2.tsx 1`] = `"2446c766091d4ffc3bd33d366fd04fbd"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/index.ts 1`] = `"cc2c8bd60d2ca37ca3a1be1623d276d5"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/layout.tsx 1`] = `"77d2bfe700634435ba889dd18bc253a3"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/redux/ducks/index.ts 1`] = `"6bd41dc838fe659b45219c0a9ee91e5a"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/redux/sagas/index.ts 1`] = `"4079a6b4f1e6d81cbc94c5a1d60604a9"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/redux/selectors/index.ts 1`] = `"85f9a89021625dbd6a152f541a920c29"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/redux/selectors/testRoute.ts 1`] = `"144fb6c9b9d53d42137e09bc4cbbbc26"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/index.ts 1`] = `"b8b115c44607f9bf1df189f677650f79"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/testComponent3.tsx 1`] = `"a7b9694f82808a0f9251e0b3946b967f"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/index.ts 1`] = `"7219714256642c7a44858c42a80bbf52"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/layout.tsx 1`] = `"746d1b3c83a2fc39add4e85eaf59cbc5"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/ducks/index.ts 1`] = `"a41d6164e37356212616d341b28aec9d"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/sagas/index.ts 1`] = `"4079a6b4f1e6d81cbc94c5a1d60604a9"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/index.ts 1`] = `"45149cd07269f32980273a007a92c198"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/testRoute2.ts 1`] = `"144fb6c9b9d53d42137e09bc4cbbbc26"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/index.ts 1`] = `"d618ef580c6c78402ddc979c9df88c30"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/layout.tsx 1`] = `"959b8d0b1c57ad5f65ab18f42412254a"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/ducks/index.ts 1`] = `"b8691136ebd5bcef166911cb3b704695"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/sagas/index.ts 1`] = `"4079a6b4f1e6d81cbc94c5a1d60604a9"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/index.ts 1`] = `"e02cddab29983a120f513e8b3e53b90d"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/testRoute3.ts 1`] = `"144fb6c9b9d53d42137e09bc4cbbbc26"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/ui/readme.md 1`] = `"30021987e695b162f2888956063d23d8"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/ui/testUi/index.ts 1`] = `"8a9de13f6510c85917c451b26ebdb783"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/ui/testUi/testUi.story.tsx 1`] = `"4b070b3b570f6e9f52e1eba5d2a57c64"`;

exports[`generating duck should generate a new duck: <project-root>playground/src/ui/testUi/testUi.tsx 1`] = `"0681a3f4331a7f3bef9962b38cc03dde"`;

exports[`generating duck should generate a new duck: apr g duck --name testDuck --route src --autoLink 1`] = `
",
Loaded templates: <project-root>apr-cli/_templates/
       added: src/redux/ducks/testDuck/testDuck.ts
,Warning: The 'await-promise' rule requires type information.
Warning: The 'deprecation' rule requires type information.
Warning: The 'no-floating-promises' rule requires type information.
Warning: The 'no-unnecessary-qualifier' rule requires type information.
Warning: The 'no-unnecessary-type-assertion' rule requires type information.
Warning: The 'strict-type-predicates' rule requires type information.
"
`;

exports[`generating duck should generate a new duck: file-list 1`] = `
Array [
  "<project-root>playground/src/components/RootLayout/index.tsx",
  "<project-root>playground/src/components/testComponent/index.ts",
  "<project-root>playground/src/components/testComponent/testComponent.tsx",
  "<project-root>playground/src/index.tsx",
  "<project-root>playground/src/redux/ducks/index.ts",
  "<project-root>playground/src/redux/ducks/testDuck/testDuck.ts",
  "<project-root>playground/src/redux/sagas/index.ts",
  "<project-root>playground/src/redux/selectors/index.ts",
  "<project-root>playground/src/routes/readme.md",
  "<project-root>playground/src/routes/testRoute/components/testComponent2/index.ts",
  "<project-root>playground/src/routes/testRoute/components/testComponent2/testComponent2.tsx",
  "<project-root>playground/src/routes/testRoute/index.ts",
  "<project-root>playground/src/routes/testRoute/layout.tsx",
  "<project-root>playground/src/routes/testRoute/redux/ducks/index.ts",
  "<project-root>playground/src/routes/testRoute/redux/sagas/index.ts",
  "<project-root>playground/src/routes/testRoute/redux/selectors/index.ts",
  "<project-root>playground/src/routes/testRoute/redux/selectors/testRoute.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/components/testComponent3/testComponent3.tsx",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/layout.tsx",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/ducks/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/sagas/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/redux/selectors/testRoute2.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/layout.tsx",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/ducks/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/sagas/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/index.ts",
  "<project-root>playground/src/routes/testRoute/routes/testRoute2/routes/testRoute3/redux/selectors/testRoute3.ts",
  "<project-root>playground/src/ui/readme.md",
  "<project-root>playground/src/ui/testUi/index.ts",
  "<project-root>playground/src/ui/testUi/testUi.story.tsx",
  "<project-root>playground/src/ui/testUi/testUi.tsx",
]
`;
